# mealie

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CONTRIBUTING.md  Caddyfile  Caddyfile.dev  Dockerfile  Dockerfile.arm  Dockerfile.dev  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  Taskfile.yml  alembic.ini  cliff.toml  crowdin.yml  docker-compose.arm.yml  docker-compose.dev.yml  docker-compose.yml  gunicorn_conf.py  index.html  makefile  netlify.toml  pyproject.toml  renovate.json  requirements.dev.txt  requirements.txt  scratch.json  sitemap.xml  template.env  template.vue  vetur.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml  stale.yml
.github/DISCUSSION_TEMPLATE/: feature-request.yaml  oauth-provider-example.yaml  oauth_example.yaml
.github/ISSUE_TEMPLATE/: bug-report  bug-report.yaml  bug_report.md  config.yml  recipe-scraper-bug.yaml  task.yaml  v1-bug-report.yaml  v1-task  v1-task.yaml
.github/workflows/: backend-docker-nightly.yml  backend-test-all.yml  backend-tests.yml  beta-release.yml  boc-builder.yml  build-docs.yml  ci.yml  codeql.yml  convenitonal-commits.yml  dependabot.yml  dockerbuild.alpine.yml  dockerbuild.dev-docs.yml  dockerbuild.dev.yml  dockerbuild.prod.yml  dockerbuild.release.yml  e2e.yml  frontend-docker-nightly.yml  frontend-lint.yml  nightly.yml  partial-backend.yml  partial-builder.yml  partial-frontend.yml  partial-trivy-backend-container-scanning.yml  partial-trivy-container-scanning.yml  partial-trivy-frontend-container-scanning.yml  pull-request-lint.yml  pull-requests.yml  pytest.yml  release-drafter.yml  release.yml  scheduled-checks.yml  scratch.yml  semantic.yml  stale.yml  test-all.yml  trivy-container-scanning.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2022-02-17-09:21:42_6b0f5f32d602_initial_tables.py  2022-02-21-19.56.24_6b0f5f32d602_initial_tables.py  2022-03-23-17.43.34_263dd6707191_convert_quantity_from_integer_to_float.py  2022-03-27-19.30.28_f1a2dbee5fe9_add_original_text_column_to_recipes_.py  2022-03-31-19.19.55_59eb59135381_add_tags_to_cookbooks.py  2022-04-03-10.48.51_09dfc897ad62_add_require_all_for_cookbook_filters.py  2022-06-01-11.12.06_ab0bae02578f_add_use_abbreviation_column_to_.py  2022-06-15-21.05.34_f30cf048c228_add_new_webhook_fields.py  2022-08-05-17.07.07_089bfa50d0ed_add_is_ocr_recipe_column_to_recipes.py  2022-08-12-19.05.59_188374910655_add_login_attemps_and_locked_at_field_.py  2022-08-13-17.07.07_089bfa50d0ed_add_is_ocr_recipe_column_to_recipes.py  2022-08-29-13.57.40_44e8d670719d_add_extras_to_shopping_lists_list_items_.py  2022-09-27-14.53.14_2ea7a807915c_add_recipe_timeline_events_table.py  2022-11-03-13.10.24_1923519381ad_renamed_timeline_event_message_and_.py  2022-11-22-03.42.45_167eb69066ad_add_recipe_scale_to_shopping_list_item_.py  2022-12-11-22.01.21_99bca5a25f78_add_no_password_login_column.py  2023-01-03-18.16.38_c2e7e37d45cb_add_color_to_tags_and_categories.py  2023-01-10-14.25.12_74281a49e6ae_merge_167eb69066ad_and_c2e7e37d45cb.py  2023-01-21-16.54.44_165d943c64ee_add_related_user_to_mealplan.py  2023-02-02-22.03.19_b04a08da2108_added_shopping_list_label_settings.py  2023-02-07-20.57.21_ff5f73b01a7a_add_missing_foreign_key_and_order_.py  2023-02-10-21.18.32_16160bf731a0_add_more_indices_necessary_for_search.py  2023-02-12-22.03.19_b04a08da2108_added_shopping_list_label_settings.py  2023-02-14-20.45.41_5ab195a474eb_add_normalized_search_properties.py  2023-02-16-21.26.00_59da1a87a3b7_adds_auth_method_to_user_table.py  2023-02-21-22.03.19_b04a08da2108_added_shopping_list_label_settings.py  2023-02-22-21.45.52_38514b39a824_add_auth_method_to_user_table.py  2023-04-13-06.47.04_b3dbb554ba53_postgres_fuzzy_search.py  2023-05-29-21.52.22_bf3c18cd3d48_add_quantities_to_meal_plans.py  2023-08-06-21.00.34_04ac51cbe9a4_added_group_slug.py  2023-08-14-19.30.49_1825b5225403_added_recipe_note_to_shopping_list_.py  2023-08-15-16.25.07_bcfdad6b7355_remove_tool_name_and_slug_unique_.py  2023-09-01-14.55.42_0341b154f79a_.py  2023-09-01-14.55.42_0341b154f79a_added_normalized_unit_and_food_names.py  2023-10-04-14.29.26_dded3119c1fe_added_unique_constraints.py  2023-10-04-14.29.26_dded3119c1fe_added_unique_constraints_to_m2m_tables.py  2023-10-07-16.16.54_11ae173e276e_add_quantities_to_meal_mealplans.py  2023-10-19-19.22.55_ba1e4a6cfe99_added_plural_names_and_alias_tables_for_.py  2023-12-28-05.08.32_09aba125b57a_add_oidc_auth_method.py  2024-01-04-12.40.03_0ea6eb8eaa44_add_creation_tag_to_group_preferences.py  (+14 more)
api/redoc/: index.html
app_data/templates/: recipes.md
assets/stylesheets/: custom.css
changelog/v0.1.0/: index.html
changelog/v0.2.0/: index.html
changelog/v0.3.0/: index.html
changelog/v0.4.0/: index.html
changelog/v0.4.1/: index.html
changelog/v0.4.2/: index.html
changelog/v0.4.3/: index.html
changelog/v0.5.0/: index.html
changelog/v0.5.1/: index.html
depends/: download-and-extract.sh  install_webp.sh
dev/: README.md  build.py  dev-notes.md  non-working-links.txt  todos.md
docker/: Dockerfile  api.Dockerfile  api.entry.sh  docker-compose.dev.yml  docker-compose.yml  entry.sh  frontend.Caddyfile  frontend.Dockerfile  frontend.entry.sh  omni.Dockerfile  omni.docker-compose.yml  omni.entry.sh  omni.entrypoint.sh
docs/: Caddyfile  Dockerfile  docker-compose.yml  mkdocs.yml
frontend/: .env.development  .eslintrc.js  .nuxtignore  .prettierrc  Caddyfile  Dockerfile  Dockerfile.dev  README.md  frontend.Dockerfile  nuxt.config.js  package-lock.json  package.json  run.sh  template.env  tsconfig.json  vetur.config.js  vitest.config.js  vue.config.js  vuetify.options.js
frontend.old/: README.md  jsconfig.json  package.json
mealie/: __init__.py  app.py  app_config.py  global_scheduler.py  main.py  mealie.db  run.sh  scratch.py  settings.py  startup.py
overrides/: home.html  main.html
roadmap/: index.html
search/: search_index.json
tests/: app_routes.py  conftest.py  pre_test.py  test_config.py
(+2394 files in other folders)
